2003-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (DllMain): Fix contributed by Achim Domma. For
	a DLL build, update PATH during Magick DLL initialization to
	include the directory where the Magick core DLL resides. This
	allows the loadable modules to find the core DLLs, even if the
	core DLLs are not already in the PATH.

2003-05-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* GraphicsMagick 1.0.1 released.
	* version.sh (PACKAGE_RELEASE_DATE): Update for 1.0.1 release.
	* index.html: Adjust width setting for magick.png.
	* coders/logo.c: Update to use temporary frog logo image
	until official logo image is available.
	* magick/magick_config_api.h.in: Add HasX11 so installed
	xwindow.h works.
	* images: Replace logo images with temporary frog logo image.

2003-05-17  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* coders/png.c: stifled compiler warnings about uninitialized
	chunk and blob variables.

2003-05-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh (CHANGE_DATE): Update to reliable awk-based technique
	to extract the latest change date from the ChangeLog file.
	* Makefile.am (EXTRA_DIST): QuickStart.txt and QuickStart.html
	have not been updated, and are misleading, so they are removed.

2003-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/msl.c (MSLStartElement): Don't reset gravity if the
	user provides an x,y coordinate. Passing coodinates was loosing
	the gravity setting.

2003-05-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* GraphicsMagick 1.0 Released.
	* version.sh (LIBRARY_REVISION): Updated for the 1.0 release.
	* magick/studio.h: Add fix to avoid problems caused by zlib
	under AIX.
	* magick/cache.h: Parameterized prototypes to make them easier
	to follow.
	* filters/analyze.c: Replace C++ comments with C comments.
	* magick/command.c: For the composite, convert, identify, mogrify,
	and montage commands, make sure a usage error is returned if a