@@ -257,6 +257,23 @@ static void *GetTypeBlob(const char *filename,char *path,size_t *length,
       if (IsAccessible(path))
         return(FileToBlob(path,length,exception));
     }
+
+  /*
+    Search MAGICK_HOME.
+  */
+  if (getenv("MAGICK_HOME") != (char *) NULL)
+    {
+# if defined(POSIX)
+      FormatString(path,"%.512s/lib/%s/%.256s",getenv("MAGICK_HOME"),
+        MagickLibSubdir,filename);
+# else
+      FormatString(path,"%.512s%s%.256s",getenv("MAGICK_HOME"),
+        DirectorySeparator,filename);
+# endif /* !POSIX */
+      if (IsAccessible(path))
+        return(FileToBlob(path,length,exception));
+    }
+
   /*
     Search current directory.
   */
