@@ -53,6 +53,17 @@
 </tr>
 </table>
 <p>
+2003-05-25  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/type.c (GetTypeBlob): Search $MAGICK_HOME for type.mgk.
+  <LI> coders/modules.mgk: Add missing mappings for PNG8,
+        PNG24, and PNG32.<BR>
+  <LI> VisualMagick/bin/modules.mgk: Add missing mappings for PNG8,
+        PNG24, and PNG32.
+
+</UL>
+<p>
 2003-05-23  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
